forEnersys/nthing Salesforce CPQ/objects/ConfigurationRule__c.object
<CustomObject>
    <customHelpPage>ConfigurationRuleHelp</customHelpPage>
    <description>Links product-scoped Product Rules to specific bundle to validate correct configuration.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this rule should be used in validating configurations.</description>
        <inlineHelpText>Indicates whether this rule should be used in validating configurations.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AscendingNestedLevel__c</fullName>
        <description>Include ancestor options to the specified level when evaluating this rule&apos;s conditions in the configurator.</description>
        <inlineHelpText>Include ancestor options to the specified level when evaluating this rule&apos;s conditions in the configurator.</inlineHelpText>
        <label>Ascending Nested Condition Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DescendingActionNesting__c</fullName>
        <description>Allow descendant options up to the specified level to be targeted by this rule&apos;s actions when executing in the configurator.</description>
        <inlineHelpText>Allow descendent options up to the specified level to be targeted by this rule&apos;s actions when executing in the configurator.</inlineHelpText>
        <label>Descending Nested Action Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DescendingNestedLevel__c</fullName>
        <description>Include descendant options to the specified level when evaluating this rule&apos;s conditions in the configurator.</description>
        <inlineHelpText>Include descendant options to the specified level when evaluating this rule&apos;s conditions in the configurator.</inlineHelpText>
        <label>Descending Nested Condition Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductFeature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product feature validated by this rule.</description>
        <inlineHelpText>Select the product feature you want this rule to validate.</inlineHelpText>
        <label>Product Feature</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Product__c</field>
                <operation>equals</operation>
                <valueField>ProductFeature__c.ConfiguredSKU__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ProductFeature__c</referenceTo>
        <relationshipLabel>Configuration Rules</relationshipLabel>
        <relationshipName>Configuration_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductRule__c</fullName>
        <description>The actual rule that defines logic used to validate product configuration.</description>
        <inlineHelpText>Select the product rule that contains the logic to validate your product configurations.</inlineHelpText>
        <label>Product Rule</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ProductRule__c.Scope__c</field>
                <operation>equals</operation>
                <value>Product</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ProductRule__c</referenceTo>
        <relationshipLabel>Configuration Rules</relationshipLabel>
        <relationshipName>ConfigurationRules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Configured product to be validated by this rule.</description>
        <inlineHelpText>Select the configured product you want this rule to validate.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Configuration Rules</relationshipLabel>
        <relationshipName>ConfigurationRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RuleEvaluationEvent__c</fullName>
        <description>Evaluation event of referenced rule.</description>
        <formula>TEXT(ProductRule__r.EvaluationEvent__c)</formula>
        <inlineHelpText>Specify when this rule should be evaluated.</inlineHelpText>
        <label>Rule Evaluation Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RuleType__c</fullName>
        <description>Type of referenced rule. Convenience field to avoid querying related rule record.</description>
        <formula>TEXT(ProductRule__r.Type__c)</formula>
        <inlineHelpText>Type of product rule referenced by this configuration rule.</inlineHelpText>
        <label>Rule Type</label>
        <type>Text</type>
    </fields>
    <label>Configuration Rule</label>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>Rule #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configuration Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Ensure_rule_type_nested_level</fullName>
        <active>true</active>
        <description>Ensures the related Product Rule is of type Validation, Alert or Selection when specifying either an ascending or descending nested level.</description>
        <errorConditionFormula>(TEXT(ProductRule__r.Type__c) != null &amp;&amp; TEXT(ProductRule__r.Type__c) != &apos;Validation&apos; &amp;&amp; TEXT(ProductRule__r.Type__c) != &apos;Selection&apos; &amp;&amp; TEXT(ProductRule__r.Type__c) != &apos;Alert&apos;) &amp;&amp; (TEXT(AscendingNestedLevel__c) != null || TEXT(DescendingNestedLevel__c) != null)</errorConditionFormula>
        <errorMessage>Nested Level only supported for Validation, Alert and Selection product rules.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ensure_supported_nested_level</fullName>
        <active>true</active>
        <description>Ensure the value of either the ascending or descending nested level field is None or 1.</description>
        <errorConditionFormula>(TEXT(AscendingNestedLevel__c) != null &amp;&amp; TEXT(AscendingNestedLevel__c) != &apos;1&apos;) || (TEXT(DescendingNestedLevel__c) != null &amp;&amp; TEXT(DescendingNestedLevel__c) != &apos;1&apos;)</errorConditionFormula>
        <errorMessage>The maximum supported Nested Level is 1.</errorMessage>
    </validationRules>
</CustomObject>